# DICOM_viewer_service

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: dicom_endpoints.py  router.py
app/services/: dicom_service.py
app/static/: dicom_viewer.html  index.html
app/static/css/: modal.css  styles.css
app/static/js/: general_fun.js
